fix line-spacing for member-profile-text

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -30,11 +30,11 @@ $header-bg-color: #000;
 }
 
 .member-profile {
-    margin-bottom: 3em;
+    padding-bottom: 2em;
 }
 
-.member-profile-text {
-    line-height: 0.4;
+.member-profile-text p {
+    margin-bottom: 0em;
 }
 
 body {
